--- a/layouts/partials/navbar.html
+++ b/layouts/partials/navbar.html
@@ -22,6 +22,7 @@
             <img class="block dark:hidden" src="{{ $logoPath | relURL }}" alt="{{ .Site.Title }}" height="{{ $logoHeight }}" width="{{ $logoWidth }}" />
             <img class="hidden dark:block" src="{{ $logoDarkPath | relURL }}" alt="{{ .Site.Title }}" height="{{ $logoHeight }}" width="{{ $logoWidth }}" />
             {{- end }}
+            {{ .Param "favicon" }}
             {{- if (.Site.Params.navbar.displayTitle | default true) }}
             <span class="mx-2 font-extrabold inline select-none" title="{{ .Site.Title }}">{{- .Site.Title -}}</span>
             {{- end }}
