--- a/layouts/partials/custom/head-end.html
+++ b/layouts/partials/custom/head-end.html
@@ -1,2 +1,4 @@
 <link rel="icon" href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 100 100%22><text y=%22.9em%22 font-size=%2290%22>{{ .Param "favicon" }}</text></svg>">
+{{ if hugo.IsProduction }}
 <script async src="https://u.l-k.us/script.js" data-website-id="59344e4b-a1ee-4c79-bc10-ed2e191ec29d"></script>
+{{ end }}
