Aria-hidden on ASCII drawing

--- a/layouts/page/face.html
+++ b/layouts/page/face.html
@@ -1,6 +1,6 @@
 {{ define "face" }}
 <div>
-    <pre>MYFACE</pre>
+    <pre aria-hidden="true">MYFACE</pre>
     <p>{{ .Content }}</p>
 </div>
 {{ end }}
