Remove unused partial, add aria-hidden to correct place

--- a/layouts/index.html
+++ b/layouts/index.html
@@ -2,7 +2,7 @@
 <div class="flex">
     {{ partial "sidebar.html" (dict "context" . "disableSidebar" true "displayPlaceholder" false) }}
     <section class="about">
-        <pre class="ascii-picture">{{ partial `myface` . }}</pre>
+        <pre aria-hidden="true" class="ascii-picture">{{ partial `myface` . }}</pre>
         <div class="about__content">{{ .Content }}</div>
     </section>
 </div>
