Add event to search

--- a/layouts/partials/search.html
+++ b/layouts/partials/search.html
@@ -1,6 +1,7 @@
 <div class="search-wrapper relative md:w-64">
     <div class="relative flex items-center text-gray-900 contrast-more:text-gray-800 dark:text-gray-300 contrast-more:dark:text-gray-300">
         <input
+            data-unami-event="search"
             placeholder="search"
             class="search-input block w-full appearance-none rounded-lg px-3 py-2 transition-colors text-base leading-tight md:text-sm bg-black/[.05] dark:bg-gray-50/10 focus:bg-white dark:focus:bg-dark placeholder:text-gray-500 dark:placeholder:text-gray-400 contrast-more:border contrast-more:border-current"
             type="search"
