--- a/layouts/partials/head.html
+++ b/layouts/partials/head.html
@@ -22,6 +22,7 @@
     {{ template "_internal/twitter_cards.html" . -}}
 
     {{ partialCached "head-css.html" . }}
+    {{ partial "custom/head-end.html" . }}
 
     <script>
      document.addEventListener("DOMContentLoaded", (event) => {
