Fix: change to correct partial

--- a/layouts/partials/head.html
+++ b/layouts/partials/head.html
@@ -22,7 +22,7 @@
     {{ template "_internal/twitter_cards.html" . -}}
 
     {{ partialCached "head-css.html" . }}
-    {{ partial "custom/head-end.html" . }}
+    {{ partial "custom/head-start.html" . }}
 
     <script>
      document.addEventListener("DOMContentLoaded", (event) => {
