--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -49,3 +49,9 @@ header {
 .flex-wrap {
     flex-wrap: wrap;
 }
+.flex-column {
+    flex-direction: column;
+}
+.place-content-center {
+    place-content: center;
+}
