--- a/layouts/partials/head.html
+++ b/layouts/partials/head.html
@@ -18,7 +18,7 @@
     <meta name="description" content="{{ partial "utils/page-description.html" . }}" />
 
     {{ partial "opengraph.html" . }}
-    {{ template "_internal/schema.html" . -}}
+    {{/* template "_internal/schema.html" . -*/}}
     {{ template "_internal/twitter_cards.html" . -}}
 
     {{ partialCached "head-css.html" . }}
