--- a/layouts/partials/head.html
+++ b/layouts/partials/head.html
@@ -21,7 +21,7 @@
     {{/* template "_internal/schema.html" . -*/}}
     {{ template "_internal/twitter_cards.html" . -}}
 
-    {{ partialCached "head-css.html" . }}
+    {{ partial "head-css.html" . }}
     {{ partial "custom/head-start.html" . }}
 
     <script>
